testcases/10-tcp-persistent-connections/new-svc-object.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-random-app
  namespace: tcp-random-app
  labels:
    app: tcp-random-app
    service: tcp-random-app
spec:
  type: ClusterIP
  ports:
  - name: tcp
    port: 17777
    protocol: TCP
    targetPort: 17777
  - name: http2-tunnel
    port: 17778
    protocol: TCP
    targetPort: 17778
  selector:
    app: tcp-random-app
---
